--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,5 @@
-/*----------------
-RESET
-----------------*/
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
+@import url(offset.css);
+@import url(reset.css);
 /*----------------
 CONTAINER
 ----------------*/
@@ -17,6 +11,13 @@ CONTAINER
     margin-top: .625rem;
     margin-bottom: .625rem;
 }
+.container:nth-child(2) > .row{
+    height: 2.5rem;
+}
+.container:last-child > .row{
+    height: 2.5rem;
+}
+
 /*----------------
 MAIN
 ----------------*/
@@ -24,47 +25,50 @@ MAIN
     display: flex;
     flex: wrap;
 }
+.row > div{
+    padding: .625rem;
+}
 .col-1{
     background-color: #006cfa;
     width: calc(100% / 12);
     text-align: center;
     color: white;
-    border: 1px solid;
+    border: .0625rem solid;
 }
 .col-2{
     background-color: #006cfa;
     width: calc(100% / 12 * 2);
     text-align: center;
     color: white;
-    border: 1px solid;
+    border: .0625rem solid;
 }
 .col-5{
     background-color: #006cfa;
     width: calc(100% / 12 * 5);
     text-align: center;
     color: white;
-    border: 1px solid;
+    border: .0625rem solid;
 }
 .col-12{
     background-color: #006cfa;
     width: calc(100%);
     text-align: center;
     color: white;
-    border: 1px solid;
+    border: .0625rem solid;
 }
 .col-8{
     background-color: #006cfa;
     width: calc(100% / 12 * 8);
     text-align: center;
     color: white;
-    border: 1px solid;
+    border: .0625rem solid;
 }
 .col-6{
     background-color: #006cfa;
     width: calc(100% / 12 * 6);
     text-align: center;
     color: white;
-    border: 1px solid;
+    border: .0625rem solid;
 }
 .row1{
     display: flex;
@@ -81,71 +85,40 @@ MAIN
     width: calc(100% / 12 * 11);
     text-align: center;
     color: white;
-    border: 1px solid;
+    border: .0625rem solid;
 }
 .col-10{
     background-color: #006cfa;
     width: calc(100% / 12 * 10);
     text-align: center;
     color: white;
-    border: 1px solid;
+    border: .0625rem solid;
 }
 .col-3{
     background-color: #006cfa;
     width: calc(100% / 12 * 3);
     text-align: center;
     color: white;
-    border: 1px solid;
+    border: .0625rem solid;
 }
 .col-9{
     background-color: #006cfa;
     width: calc(100% / 12 * 9);
     text-align: center;
     color: white;
-    border: 1px solid;
+    border: .0625rem solid;
 }
 .col-4{
     background-color: #006cfa;
     width: calc(100% / 12 * 4);
     text-align: center;
     color: white;
-    border: 1px solid;
+    border: .0625rem solid;
 }
 .col-7{
     background-color: #006cfa;
     width: calc(100% / 12 * 7);
     text-align: center;
     color: white;
-    border: 1px solid;
-}
-/*----------------
-MAIN
-----------------*/
-.offset1{
-    margin-left: calc(100% / 12 * 11);
-}
-.offset2{
-    margin-left: calc(100% / 12 * 10);
-}.offset3{
-    margin-left: calc(100% / 12 * 9);
-}.offset4{
-    margin-left: calc(100% / 12 * 8);
-}.offset5{
-    margin-left: calc(100% / 12 * 7);
-}.offset6{
-    margin-left: calc(100% / 12 * 6);
-}.offset7{
-    margin-left: calc(100% / 12 * 5);
-}.offset8{
-    margin-left: calc(100% / 12 * 4);
-}.offset9{
-    margin-left: calc(100% / 12 * 3);
-}.offset10{
-    margin-left: calc(100% / 12 * 2);
-}.offset11{
-    margin-left: calc(100% / 12 * 1);
-}
-
-.row > div{
-    padding: .625rem;
+    border: .0625rem solid;
 }
